--- a/server/templates/templates/main.html
+++ b/server/templates/templates/main.html
@@ -22,14 +22,14 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dist/css/main.css') }}">
     <!-- Font awesome -->
     <link href="{{ url_for('static', filename='fontawesome/css/all.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='fontawesome/css/sharp-solid.css') }}" rel="stylesheet">
     <!-- Custom styles -->
     <link href="{{ url_for('static', filename='error/styles.css') }}" rel="stylesheet">
 </head>
 
 <body>
-    <h1 class="text-red-500">BamBuild Staff</h1>
-    {% block content %}
+    {% block page %}
     {% endblock %}
+    <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
 </body>
-
 </html>
