--- a/server/templates/order_details.html
+++ b/server/templates/order_details.html
@@ -5,22 +5,33 @@
     <title>Image Preview</title>
 </head>
 <body>
-    <h1>Order Details</h1>
-    <p>Order ID: {{ order.id }}</p>
-    <p>Order Identifier: {{ order.identifier }}</p>
-    <p>Product Identifier: {{ order.product_identifier }}</p>
-    <p>Order Details: {{ order.details }}</p>
-    <p>Customer Email: {{ order.email }}</p>
-    <p>Customer Name: {{ order.firstname }} {{ order.lastname }}</p>
-    <p>Shipping Method: {{ order.shipping_method }}</p>
-    <p>Shipping Details: {{ order.shipping_details }}</p>
-    <p>Submitted: {{ order.submitted }}</p>
-{% if image %}
-    <h1>Image Preview</h1>
-    <img id="image" src="https://bambuild.ml/images/logo.png" alt="Image" style="max-width: 100%">
-    <script>
-        document.getElementById("image").src = "data:{{ image.mimetype }};base64,{{ image.image.decode() }}";
-    </script>
-{% endif %}
+
 </body>
 </html>
+
+
+
+{% extends "templates/page.html" %}
+{% block content %}
+    <div class="p-4">
+        <h1 class="text-6xl font-bold">Order Details</h1>
+        <ul>
+            <li><b>Order ID:</b> {{ order.id }}</li>
+            <li><b>Order Identifier:</b> {{ order.identifier }}</li>
+            <li><b>Product Identifier:</b> {{ order.product_identifier }}</li>
+            <li><b>Order Details:</b> {{ order.details }}</li>
+            <li><b>Customer Email:</b> {{ order.email }}</li>
+            <li><b>Customer Name:</b> {{ order.firstname }} {{ order.lastname }}</li>
+            <li><b>Shipping Method:</b> {{ order.shipping_method }}</li>
+            <li><b>Shipping Details:</b> {{ order.shipping_details }}</li>
+            <li><b>Submitted:</b> {{ order.submitted }}</li>
+        </ul>
+        {% if image %}
+            <h1 class="text-6xl font-bold my-4">Image Preview</h1>
+            <img id="image" src="https://bambuild.ml/images/logo.png" alt="Image" style="max-width: 100%">
+            <script>
+                document.getElementById("image").src = "data:{{ image.mimetype }};base64,{{ image.image.decode() }}";
+            </script>
+        {% endif %}
+    </div>
+{% endblock %}
