--- a/server/templates/components/navbar.html
+++ b/server/templates/components/navbar.html
@@ -12,4 +12,8 @@
         <i class="fa-sharp fas fa-clipboard-list"></i>
         Order Details
     </a>
+    <a href="/market" class="{{ "active" if page == "market" }}">
+        <i class="fa-sharp fas fa-shop"></i>
+        Market Order
+    </a>
 </div>
