Add support for pre-made tote bags

--- a/server/templates/market.html
+++ b/server/templates/market.html
@@ -16,6 +16,10 @@
                             <option value="cash">Cash</option>
                         </select>
                     </label>
+                    <label class="col-span-12">
+                        <span>Notes</span>
+                        <input type="text" name="notes" id="notes">
+                    </label>
                 </div>
 
                 <div class="form-section">
@@ -27,6 +31,7 @@
                             <option value="Small Keyring">Small Keyring</option>
                             <option value="Tote Bag">Tote Bag</option>
                             <option value="Light Box">Light Box</option>
+                            <option value="Other">Other</option>
                         </select>
                     </label>
                     <label class="col-span-3">
