Update user interface

--- a/server/templates/404.html
+++ b/server/templates/404.html
@@ -1,4 +1,4 @@
-{% extends "old/template.html" %}
+{% extends "templates/main.html" %}
 {% block content %}
     <div class="error-page">
         <div class="error-bg error-404">
